--- a/style.css
+++ b/style.css
@@ -25,25 +25,23 @@ a {
 .foto-logo-container {
     display: flex;
     width: 100%;
-    height: 25rem;
+    height: 10%;
     background-color: lightcyan;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;  
 
     .logo-largo {
-        height: 6rem;
-        margin-bottom: 2rem;
-        margin-left: 2rem;
+        position: absolute;
+        height: 8rem;            
     }
 
-    .fotos-container {
-        margin-right: 4rem;
-    }
+    & .foto-2 {                
+        width: 100%;        
+    }    
 }
 
 /* Primera Seccion: Sobre Eloy */
 
-.title {
+.title-primer-banner {
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
     color: cadetblue;
@@ -51,7 +49,6 @@ a {
     margin-top: 5rem;
     margin-bottom: 5rem;
 }
-
 
 .primer-texto-container {
     display: flex;
@@ -64,49 +61,82 @@ a {
     gap: 3rem;
     border: solid 1px lightblue;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 1rem;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
 
-    .foto-1 {
-        width: 12rem;
-        border-radius: 1rem;
+    .img-container{
+        .foto-1 {
+            width: 12rem;
+            border-radius: 1rem;
+        }
     }
 
     .text-container {
+        display: flex;
+        align-items: center;
         justify-content: space-evenly;
 
+        & .parrafo-izquierdo-primer-banner {
+            .title {
+                font-family: 'Roboto', sans-serif;
+                font-size: 20px;
+                color: cadetblue;
+                margin-bottom: 1rem;
+                margin-top: 0rem;
+            }
 
-        .title {
-            font-family: 'Roboto', sans-serif;
-            font-size: 20px;
-            color: cadetblue;
-            margin-bottom: 1rem;
-            margin-top: 0rem;
+            & p {
+                font-size: 12px;
+                flex-wrap: wrap;
+                font-family: 'Roboto', sans-serif;
+            }
         }
 
-        .linea-divisoria {
-            height: 21rem;
-            width: 0.13rem;
+        .parrafo-centro-primer-banner {
+            & p {
+                font-size: 12px;
+                flex-wrap: wrap;
+                font-family: 'Roboto', sans-serif;
+            }           
+        }
+
+        .linea-divisoria-primer-banner {
+            height: 22rem;
+            width: 0.11rem;
             margin-left: 1rem;
-            margin-right: 1rem;
+            margin-right: 1rem;            
             background-color: cadetblue;
             border-radius: 1rem;
         }
 
-        & p {
-            font-size: 12px;
-            flex-wrap: wrap;
-            font-family: 'Roboto', sans-serif;
-        }
+        .parrafo-derecho-primer-banner {
+            & p {
+                font-size: 12px;
+                flex-wrap: wrap;
+                font-family: 'Roboto', sans-serif;
+            }
 
-        .oracion-final {
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            color: cadetblue;
+            .oracion-final {
+                font-family: 'Roboto', sans-serif;
+                font-size: 14px;
+                color: cadetblue;
+            }
         }
     }
 }
 
+
 /* Segunda Banner: Que es el sindrome de crouzon */
+
+.title-segundo-banner {
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: cadetblue;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 
 .segundo-texto-container {
     display: flex;
@@ -126,23 +156,16 @@ a {
     }
 
     .text-container {
-        justify-content: space-evenly;
-
-
-        .title {
-            font-family: 'Roboto', sans-serif;
-            font-size: 20px;
-            color: cadetblue;
-            margin-bottom: 1rem;
-            margin-top: 0rem;
-        }
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;        
 
         .parrafo-derecho {
             margin-right: 2.5rem;
         }
 
         .linea-divisoria {
-            height: 21rem;
+            height: 18rem;
             width: 0.13rem;
             margin-left: 2rem;
             margin-right: 2rem;
@@ -154,17 +177,20 @@ a {
             font-size: 12px;
             flex-wrap: wrap;
             font-family: 'Roboto', sans-serif;
-        }
-
-        .oracion-final {
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            color: cadetblue;
-        }
+        }      
     }
 }
 
-/* Tercer Banner: Como Colabrorar? */
+/* Tercer Banner: Como Colaborar? */
+
+.title-tercer-banner {
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: cadetblue;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 
 .tercer-texto-container {
     display: flex;
@@ -227,13 +253,84 @@ a {
                 margin-top: 1rem;
                 width: 3.5rem;
                 color: cadetblue;
-
             }
         }
     }
 }
 
+/* Cuarto Banner: Sorteo */
+
+.title-sorteo {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: cadetblue;
+    margin-bottom: 1rem;
+    margin-top: 5rem;
+}
+
+.titulo-secundario {
+    text-align: center;
+    font-size: 16px;
+}
+
+.valor {
+    color: cadetblue;
+    font-size: 22px;
+}
+
+.primer-texto-container {
+    margin-top: 4rem;
+    .text-container {
+        .parrafo-izquierdo {
+            .titulo-premio {
+                color: cadetblue;
+                font-size: 22px;
+            }
+
+            & ul {  
+                display: flex;             
+                list-style: none;
+                flex-direction: column;
+                align-items: start;
+                gap: 1rem;   
+            }
+        }
+
+        .linea-divisoria-cuarto-banner {
+            height: 80rem;
+            width: 0.13rem;
+            margin-left: 2rem;
+            margin-right: 2rem;
+            background-color: cadetblue;
+            border-radius: 1rem;
+        }
+
+        .parrafo-derecho {
+            & ul {  
+                display: flex;             
+                list-style: none;
+                flex-direction: column;
+                align-items: start;
+                gap: 1rem;   
+            }
+        }
+    }    
+}
+
+
+
+
 /* Quinto Banner: Contacto */
+
+.title-quinto-banner {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: cadetblue;
+    margin-bottom: 1rem;
+    margin-top: 5rem;
+}
 
 .primer-texto-container {
     & .text-container {
@@ -242,6 +339,7 @@ a {
         & .parrafo-izquierdo {
             text-align: center;
             width: 50%;
+            
 
             & .title-advance {
                 color: cadetblue;
@@ -258,7 +356,7 @@ a {
                 margin-right: auto;
 
                 & img {
-                    width: 3rem; 
+                    width: 3rem;
                     margin: 1.5rem
                 }
             }
@@ -271,8 +369,8 @@ a {
         & .linea-divisoria {
             height: 21rem;
             width: 0.13rem;
-            margin-left: 4rem;
-            margin-right: 4rem;
+            margin-left: 1.7rem;
+            margin-right: 1.7rem;
             background-color: cadetblue;
             border-radius: 1rem;
         }
@@ -283,7 +381,7 @@ a {
 
             & p {
                 font-family: 'Roboto', sans-serif;
-                font-size: 16px;  
+                font-size: 16px;
             }
 
             & .whatsapp-container {
@@ -341,7 +439,7 @@ a {
                 background-color: cadetblue;
                 color: white;
                 justify-content: center;
-                border-radius: 10px;                
+                border-radius: 10px;
                 margin-left: auto;
                 margin-right: auto;
                 margin-top: 3rem;
@@ -368,33 +466,55 @@ a {
     }
 }
 
+/* Mensaje Final */
+
+.mensaje-final {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: cadetblue;
+    
+    margin-top: 5rem;
+}
+
 /* Footer */
 
-.tags-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
+.footer { 
+    height: 12rem;
+    background-color: lightgray;
+    margin-top: 5rem;
+    text-align: center;
+    padding: 1.5rem;   
+    width: 100%;
 
-
-    & .nav-link {
-        color: black;
+    .tags-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    
+    
+        & .nav-link {
+            color: black;
+        }
     }
+    
+    .location-container {
+        display: flex;
+        gap: 0.5rem;
+    
+        justify-content: center;
+    }
+    
+    .firma {
+        font-size: 10px;
+        color: black;
+        text-decoration: none;
+    }
+    
+    .firma:hover {
+        color: whitesmoke;
+    }
+
 }
 
-.location-container {
-    display: flex;
-    gap: 0.5rem;
-
-    justify-content: center;
-}
-
-.firma {
-    font-size: 10px;
-    color: black;
-    text-decoration: none;
-}
-
-.firma:hover {
-    color: whitesmoke;
-}
